--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,22 +2,26 @@ usersDB = {
   driver = "org.h2.Driver"
   url = "jdbc:h2:testdb-users"
   numThreads = 5
+  connectionPool = disabled
 }
 
 shippedOrdersDB = {
   driver = "org.h2.Driver"
   url = "jdbc:h2:testdb-shippedOrders"
   numThreads = 5
+  connectionPool = disabled
 }
 
 openOrdersDB = {
   driver = "org.h2.Driver"
   url = "jdbc:h2:testdb-openOrders"
   numThreads = 5
+  connectionPool = disabled
 }
 
 reportingDB = {
   driver = "org.h2.Driver"
   url = "jdbc:h2:testdb-reporting"
   numThreads = 5
+  connectionPool = disabled
 }
